--- a/Pipfile
+++ b/Pipfile
@@ -15,12 +15,12 @@ beautifulsoup4 = "==4.8.2"
 blinker = "==1.4"
 catkin-pkg = "==0.4.23"
 cbor = "==1.0.0"
-certifi = "==2019.11.28"
+certifi = "==2021.5.30"
 chardet = "==3.0.4"
-click = "==7.0"
+click = "==8.0.1"
 colorama = "==0.4.3"
 constantly = "==15.1.0"
-cryptography = "==2.8"
+cryptography = "==3.4.7"
 css-parser = "==1.0.4"
 cssselect = "==1.1.0"
 cssutils = "==1.0.2"
@@ -55,7 +55,7 @@ html5-parser = "==0.4.9"
 html5lib = "==1.0.1"
 httplib2 = "==0.14.0"
 hyperlink = "==19.0.0"
-idna = "==2.8"
+idna = "==3.2"
 ifaddr = "==0.1.6"
 incremental = "==16.10.1"
 keyring = "==18.0.1"
@@ -109,18 +109,18 @@ PyQRCode = "==1.2.1"
 PyQt5 = "==5.14.1"
 PyQtWebEngine = "==5.14.0"
 pyRFC3339 = "==1.1"
-python-dateutil = "==2.7.3"
+python-dateutil = "==2.8.2"
 python-debian = "===0.1.36ubuntu1"
 python-gnupg = "==0.4.5"
 python-snappy = "==0.5.3"
 PyTrie = "==0.2"
-pytz = "==2019.3"
+pytz = "==2021.1"
 pyxdg = "==0.26"
 PyYAML = "==5.3.1"
 regex = "==2019.8.19"
 reportlab = "==3.5.34"
 "repoze.lru" = "==0.7"
-requests = "==2.22.0"
+requests = "==2.26.0"
 requests-unixsocket = "==0.2.0"
 roman = "==2.0.0"
 rosdistro = "==0.8.3"
@@ -131,7 +131,7 @@ SecretStorage = "==2.3.1"
 service-identity = "==18.1.0"
 simplejson = "==3.16.0"
 sip = "==4.19.21"
-six = "==1.14.0"
+six = "==1.16.0"
 smmap = "==4.0.0"
 soupsieve = "==1.9.5"
 sqlparse = "==0.4.1"
@@ -140,7 +140,7 @@ tinyik = "==2.2.0"
 Twisted = "==18.9.0"
 txaio = "==2.10.0"
 u-msgpack-python = "==2.1"
-urllib3 = "==1.25.8"
+urllib3 = "==1.26.6"
 wadllib = "==1.3.3"
 webencodings = "==0.5.1"
 WebOb = "==1.8.5"
@@ -184,7 +184,7 @@ automat = "==0.8.0"
 cython = "==0.29.14"
 django = "==3.1"
 gitpython = "==3.1.18"
-markupsafe = "==1.1.0"
+markupsafe = "==2.0.1"
 pygments = "==2.3.1"
 pyopengl = "==3.1.0"
 pyopenssl = "==19.0.0"
@@ -193,6 +193,23 @@ pyqt5 = "==5.14.1"
 pyrfc3339 = "==1.1"
 secretstorage = "==2.3.1"
 twisted = "==18.9.0"
+boto3 = "==1.18.21"
+botocore = "==1.21.21"
+cffi = "==1.14.6"
+charset-normalizer = "==2.0.4"
+decorator = "==5.0.9"
+dynaconf = "==3.1.4"
+hvac = "==0.11.0"
+jinja2 = "==3.0.1"
+jmespath = "==0.10.0"
+knox = "==0.1.14"
+loguru = "==0.5.3"
+pillow = "==8.3.1"
+pycparser = "==2.20"
+pyjwt = "==2.1.0"
+s3transfer = "==0.5.0"
+shortuuid = "==1.0.1"
+validators = "==0.18.2"
 
 [dev-packages]
 
