--- a/Pipfile
+++ b/Pipfile
@@ -29,6 +29,7 @@ defusedxml = "==0.6.0"
 distro = "==1.4.0"
 dj-database-url = "==0.5.0"
 Django = "==3.1"
+django-environ = "==0.4.5"
 django-filter = "==2.4.0"
 django-heroku = "==0.3.1"
 django-rest-authemail = "==2.0.6"
