--- a/requirements.txt
+++ b/requirements.txt
@@ -36,4 +36,4 @@ sqlparse==0.4.1
 urllib3==1.26.6
 validators==0.18.2
 whitenoise==5.3.0
-./django-rest-authemail
+git+git://github.com/surafelMelese/authemail.git
