--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-heroku==0.3.1
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.7.2
 dynaconf==3.1.4
+gunicorn==20.1.0
 hvac==0.11.0
 idna==3.2
 Jinja2==3.0.1
