--- a/Pipfile
+++ b/Pipfile
@@ -177,7 +177,7 @@ pyjwt = "==2.1.0"
 s3transfer = "==0.5.0"
 shortuuid = "==1.0.1"
 validators = "==0.18.2"
-requests = {git = "https://github.com/surafelMelese/authemail.git"}
+authemail = {git = "https://github.com/surafelMelese/authemail.git"}
 
 [dev-packages]
 
