--- a/backtools/.env
+++ b/backtools/.env
@@ -1,2 +1,3 @@
 SECRET_KEY=django-insecure-j08h-4fjkwrd6y5t&d!ti4adzw&5w(jhxks%vv48^w4%3v_^hj
 SITE_NAME=https://projmangtool.herokuapp.com/
+SEND_GRID_KEY= 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
