added cors herader

--- a/Pipfile
+++ b/Pipfile
@@ -177,6 +177,7 @@ pyjwt = "==2.1.0"
 s3transfer = "==0.5.0"
 shortuuid = "==1.0.1"
 validators = "==0.18.2"
+django_cors_headers = "==3.18.0"
 authemail = {git = "https://github.com/surafelMelese/django-rest-authemail.git"}
 
 [dev-packages]
