--- a/backtools/.env
+++ b/backtools/.env
@@ -1,3 +1,8 @@
 SECRET_KEY=django-insecure-j08h-4fjkwrd6y5t&d!ti4adzw&5w(jhxks%vv48^w4%3v_^hj
 SITE_NAME=https://projmangtool.herokuapp.com/
 SEND_GRID_KEY=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
+DB_ENGINE=django.db.backends.postgresql
+DB_NAME=postgres
+DB_USER=sura
+DB_PASSWORD=lekehail
+DB_HOST=localhost
